--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 ##### Sobre mi
 Mi objetivo es crear soluciones que contribuyan a mejorar el entorno que nos rodea, tratar de hacer más cómoda la vida de las personas y disfrutar mucho durante el proceso.
 
-Actualmente llevo más de 2 años trabajando como diseñador de producto en Genially aunque durante los últimos 9 años me he enfrentado a proyectos de diseño de UI, Design system, Motion design, Web design y Graphic design. Además durante 5 de estos años he trabajado en proyectos audiovisuales como técnico audiovisual, director de fotografía y operador de cámara.
+Actualmente llevo más de 2 años trabajando como diseñador de producto en Genially aunque durante los últimos 9 años me he enfrentado a proyectos de diseño de IU, Design system, Motion design, Web design y Graphic design. Además durante 5 de estos años he trabajado en proyectos audiovisuales como técnico audiovisual, director de fotografía y operador de cámara.
 ##### Competencias básicas
 `#Experiencia de usuario` `#Interfaz de usuario` `#Animación` `#Diseño de interacción` `#Arquitectura de la información` `#Investigación de usuarios`
 
@@ -178,7 +178,7 @@ Actualmente llevo más de 2 años trabajando como diseñador de producto en Geni
 ### Diseñador de IU & Sistema de diseño en [Genially](https://genially.com/)
 *Julio 2020 - Enero 2022 (Remoto)*
 >##### Descripción
->Creando las bases del sistema de diseño, documentando, diseñando los componente fundamentales y definiendo patrones básicos de diseño, buscando la máxima escalabilidad y con gran atención a la viabilidad de implementación dado que hasta el momento no existía sistema de diseño. Además durante esta etapa estuve participando en el diseño de la página web construyendo un sistema modular que permitiera al equipo de contenidos crear páginas a través de un content manager personalizado. También participé rediseñando diferentes partes de la IU de la aplicación.
+>Creando las bases del sistema de diseño, documentando, diseñando los componentes fundamentales y definiendo patrones básicos de diseño, buscando la máxima escalabilidad y con gran atención a la viabilidad de implementación dado que hasta el momento no existía sistema de diseño. Además durante esta etapa estuve participando en el diseño de la página web construyendo un sistema modular que permitiera al equipo de contenidos crear páginas a través de un content manager personalizado. También participé rediseñando diferentes partes de la IU de la aplicación.
 >
 >##### Competencias básicas
 >`#Diseño de interacción` `#Interfaz de usuario` `#Sistema de diseño` `#Animación`
@@ -256,17 +256,17 @@ IES Huarte de San Juan, *2010 - 2013 (Linares)*
 ## Otros cursos
 ##### Microcursos
 - **Investigación ágil para producto digital**, Instituto Tramontana, *2023 (Madrid)*
-- After Effects, expresiones para motion graphics, Domestika, *2019 (Online)*
-- **Gráficos vectoriales SVG**: ilustrar y animar con código, Domestika, *2019 (Online)*
 - Introducción a la programación en JavaScript, Domestika, *2020 (Online)*
 - Introducción al UX Writing, Domestika, *2020 (Online)*
 - Introducción al diseño UX, Domestika, *2020 (Online)*
 - Layout web con CSS Grid, Flexbox y otras técnicas modernas, Domestika, *2020 (Online)*
+- After Effects, expresiones para motion graphics, Domestika, *2019 (Online)*
+- **Gráficos vectoriales SVG**: ilustrar y animar con código, Domestika, *2019 (Online)*
 - Curso online de Trucos de Iluminación y Producción para Fotógrafos, *2014 (Online)*
 - Curso presencial de montaje y postproducción de video, UPMJ, *2014 (Jaén)*
 ##### Workshops
-- **UX Writing** con Mario Ferrer, *2020 (Online)*
 - **Data Driven Design** con Alfonso Romay, Torresburriel Estudio, *2021 (Online)*
+- **UX Writing** con Mario Ferrer, *2020 (Online)*
 - Comunicación visual y Visual Thinking: Piensa mejor y comunica más rápido, Sara Martínez - 5 Palabras, *2020 (Online)*
 ##### Idiomas
 - **Clases de conversación en Inglés**, Twenix, *Abril 2021 - **Actualidad** (Online)*
