--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="content-extension">
                 <div class="content-block">
                     <h5 class="secondary">Descripción</h5>
-                    <p>Llevando a cabo un proyecto de investigación para encontrar soluciones que faciliten el acceso a la tecnología y la reducción de la brecha digital en personas mayores. <a href="https://view.genially.com/65d763a85b5dfb0014dd1b29" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver documento con las conclusiones de la investigación" title="Enlace a otra página web para ver documento con las conclusiones de la investigación">Ver conclusiones</a></p>
+                    <p>Llevando a cabo un proyecto de investigación para encontrar soluciones que faciliten el acceso a la tecnología y la reducción de la brecha digital en personas mayores. <a href="https://view.genially.com/65d763a85b5dfb0014dd1b29" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver documento con las conclusiones de la investigación" title="Enlace a otra página web para ver documento con las conclusiones de la investigación">Ver conclusiones</a>.</p>
                 </div>
 
                 <div class="content-block">
@@ -332,17 +332,19 @@
             <div class="content-extension">
                 <div class="content-block">
                     <h5 class="secondary">Descripción</h5>
-                    <p>Premio expedido por la Diputación de Jaén por el Cortometraje Habitación 205. <a href="https://jaenaudiovisual.es/palmares-del-vi-rodando-por-jaen/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver la nota de prensa" title="Enlace a otra página web para ver la nota de prensa">Ver nota de prensa</a></p>
+                    <p>Premio expedido por la Diputación de Jaén por el Cortometraje Habitación 205. <a href="https://jaenaudiovisual.es/palmares-del-vi-rodando-por-jaen/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver la nota de prensa" title="Enlace a otra página web para ver la nota de prensa">Ver nota de prensa</a>.</p>
                 </div>
             </div>
         </section>
     </article>
 
-    <p><a href="#home" rel="noopener noreferrer" aria-label="Enlace para volver al principio de la página" title="Enlace para volver al principio de la página">Volver arriba</a> | <a href="assets/Álvaro Molina - Diseñador de producto.pdf" download aria-label="Enlace para descargar la versión PDF del curriculum vitae" title="Enlace para descargar la versión PDF del curriculum vitae">Descargar en PDF</a></p>
-
 <!--Footer-->
 <footer>
-    <p class="small">Página web creada siguiendo las <a href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad" title="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad">WCAG 2</a>, tratando de garantizar el nivel AAA.</p>
+    <p><a href="#home" rel="noopener noreferrer" aria-label="Enlace para volver al principio de la página" title="Enlace para volver al principio de la página">Volver arriba</a></p>
+
+    <p class="small secondary">Página web creada siguiendo las <a href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad" title="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad">WCAG 2</a>, tratando de garantizar el nivel AAA.
+    <br>
+    Si quieres puedes <a href="assets/Álvaro Molina - Diseñador de producto.pdf" download aria-label="Enlace para descargar la versión PDF del curriculum vitae" title="Enlace para descargar la versión PDF del curriculum vitae">descargar la versión PDF</a>.</p>
 </footer>
 
 </body>
