--- a/index.html
+++ b/index.html
@@ -25,15 +25,7 @@
     <!--About me-->
     <article>
         <section>
-            <div class="content-block">
-                <h1>Álvaro Molina · <i class="accent regular">Diseñador de producto</i></h1>
-                <p><span class="emojis" aria-hidden="true">👤 </span><b>Linkedin</b>: <a href="https://linkedin.com/in/alvaromolinaruiz/" target="_blank" rel="noopener noreferrer" aria-label="Enlace al perfil de Linkedin" title="Enlace al perfil de Linkedin">@alvaromolinaruiz</a>
-                <br>
-                <span class="emojis" aria-hidden="true">✉️ </span><b>Correo</b>: <a href="mailto:alvaromolrui@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Enlace para enviar un correo electrónico" title="Enlace para enviar un correo electrónico">alvaromolrui@gmail.com</a>
-                <br>
-                <span class="emojis" aria-hidden="true">📱 </span><b>Teléfono</b>: <a href="tel:+34653265884" target="_blank" rel="noopener noreferrer" aria-label="Enlace para llamar por teléfono" title="Enlace para llamar por teléfono">(+34) 653 26 58 84</a></p>
-            </div>   
-            
+            <h1><span class="emojis" aria-hidden="true">🤙 </span>Álvaro Molina · <i class="accent regular">Diseñador de producto</i></h1>
             <div class="content-block">
                 <h5 class="secondary">Sobre mi</h5>
                 <p>Mi objetivo es crear soluciones que contribuyan a mejorar el entorno que nos rodea, tratar de hacer más cómoda la vida de las personas y disfrutar mucho durante el proceso.
@@ -295,6 +287,8 @@
                     <li>Curso presencial de montaje y postproducción de video, UPMJ, <i>2014 (Jaén)</i></li>
                 </ul>
             </div>
+        </section>
+        <section>
             <div class="content-block">
                 <h5 class="secondary">Workshops</h5>
                 <ul>
@@ -303,6 +297,8 @@
                     <li>Comunicación visual y Visual Thinking: Piensa mejor y comunica más rápido, Sara Martínez - 5 Palabras, <i>2020 (Online)</i></li>
                 </ul>
             </div>
+        </section>
+        <section>
             <div class="content-block">
                 <h5 class="secondary">Idiomas</h5>
                 <ul>
@@ -310,6 +306,8 @@
                     <li>Curso de ingles nivel Upper intermediate (B2), Arena School of English, <i>2013 (Dublín)</i></li>
                 </ul>
             </div>
+        </section>
+        <section>
             <div class="content-block">
                 <h5 class="secondary">Cursos</h5>
                 <ul>
@@ -340,11 +338,18 @@
 
 <!--Footer-->
 <footer>
-    <p><a href="#home" rel="noopener noreferrer" aria-label="Enlace para volver al principio de la página" title="Enlace para volver al principio de la página">Volver arriba</a></p>
+    <a href="#home" rel="noopener noreferrer" aria-label="Enlace para volver al principio de la página" title="Enlace para volver al principio de la página">Volver arriba</a>
 
-    <p class="small secondary">Página web creada siguiendo las <a href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad" title="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad">WCAG 2</a>, tratando de garantizar el nivel AAA.
-    <br>
-    Si quieres puedes <a href="assets/Álvaro Molina - Diseñador de producto.pdf" download aria-label="Enlace para descargar la versión PDF del curriculum vitae" title="Enlace para descargar la versión PDF del curriculum vitae">descargar la versión PDF</a>.</p>
+    <div class="content-block">
+        <p><span class="emojis" aria-hidden="true">👤 </span><b>Linkedin</b>: <a href="https://linkedin.com/in/alvaromolinaruiz/" target="_blank" rel="noopener noreferrer" aria-label="Enlace al perfil de Linkedin" title="Enlace al perfil de Linkedin">@alvaromolinaruiz</a></p>
+        <p><span class="emojis" aria-hidden="true">✉️ </span><b>Correo</b>: <a href="mailto:alvaromolrui@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Enlace para enviar un correo electrónico" title="Enlace para enviar un correo electrónico">alvaromolrui@gmail.com</a></p>
+        <p><span class="emojis" aria-hidden="true">📱 </span><b>Teléfono</b>: <a href="tel:+34653265884" target="_blank" rel="noopener noreferrer" aria-label="Enlace para llamar por teléfono" title="Enlace para llamar por teléfono">(+34) 653 26 58 84</a></p>
+    </div>
+
+    <div class="content-block">
+        <p class="small secondary">Página web creada siguiendo las <a href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad" title="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad">WCAG 2</a>, tratando de garantizar el nivel AAA.</p>
+        <p class="small secondary">Si quieres puedes <a href="assets/Álvaro Molina - Diseñador de producto.pdf" download aria-label="Enlace para descargar la versión PDF del curriculum vitae" title="Enlace para descargar la versión PDF del curriculum vitae">descargar la versión PDF</a>.</p>
+    </div>
 </footer>
 
 </body>
