new contact section

--- a/index.html
+++ b/index.html
@@ -336,15 +336,21 @@
         </section>
     </article>
 
+    <!--Contact-->
+    <article>
+        <h1><span class="emojis" aria-hidden="true">🤝 </span>¡Contactemos!</h1>
+        <section>
+            <div class="content-block">
+                <p><span class="emojis" aria-hidden="true">👤 </span><b>Linkedin</b>: <a href="https://linkedin.com/in/alvaromolinaruiz/" target="_blank" rel="noopener noreferrer" aria-label="Enlace al perfil de Linkedin" title="Enlace al perfil de Linkedin">@alvaromolinaruiz</a></p>
+                <p><span class="emojis" aria-hidden="true">✉️ </span><b>Correo</b>: <a href="mailto:alvaromolrui@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Enlace para enviar un correo electrónico" title="Enlace para enviar un correo electrónico">alvaromolrui@gmail.com</a></p>
+                <p><span class="emojis" aria-hidden="true">📱 </span><b>Teléfono</b>: <a href="tel:+34653265884" target="_blank" rel="noopener noreferrer" aria-label="Enlace para llamar por teléfono" title="Enlace para llamar por teléfono">(+34) 653 26 58 84</a></p>
+            </div>
+        </section>
+    </article>
+
 <!--Footer-->
 <footer>
     <a href="#home" rel="noopener noreferrer" aria-label="Enlace para volver al principio de la página" title="Enlace para volver al principio de la página">Volver arriba</a>
-
-    <div class="content-block">
-        <p><span class="emojis" aria-hidden="true">👤 </span><b>Linkedin</b>: <a href="https://linkedin.com/in/alvaromolinaruiz/" target="_blank" rel="noopener noreferrer" aria-label="Enlace al perfil de Linkedin" title="Enlace al perfil de Linkedin">@alvaromolinaruiz</a></p>
-        <p><span class="emojis" aria-hidden="true">✉️ </span><b>Correo</b>: <a href="mailto:alvaromolrui@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Enlace para enviar un correo electrónico" title="Enlace para enviar un correo electrónico">alvaromolrui@gmail.com</a></p>
-        <p><span class="emojis" aria-hidden="true">📱 </span><b>Teléfono</b>: <a href="tel:+34653265884" target="_blank" rel="noopener noreferrer" aria-label="Enlace para llamar por teléfono" title="Enlace para llamar por teléfono">(+34) 653 26 58 84</a></p>
-    </div>
 
     <div class="content-block">
         <p class="small secondary">Página web creada siguiendo las <a href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad" title="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad">WCAG 2</a>, tratando de garantizar el nivel AAA.</p>
