--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
 <!--Header-->
 <header>
-    <h2 class="regular secondary">Curriculum vitae</h2>
+    <div class="content-block">
+        <h2 class="regular secondary">Curriculum vitae</h2>
+        <a href="#contact" rel="noopener noreferrer" aria-label="Enlace para a la sección que contiene los datos de contacto" title="Enlace para a la sección que contiene los datos de contacto">Ir a datos de contacto ↓</a>
+    </div>
 </header>
 
 <!--Content-->
@@ -25,7 +28,7 @@
     <!--About me-->
     <article>
         <section>
-            <h1><span class="emojis" aria-hidden="true">🤙 </span>Álvaro Molina · <i class="accent regular">Diseñador de producto</i></h1>
+            <h1><span class="emojis" aria-hidden="true">🤙 </span>Soy Álvaro Molina · <i class="accent regular">Diseñador de producto</i></h1>
             <div class="content-block">
                 <h5 class="secondary">Sobre mi</h5>
                 <p>Mi objetivo es crear soluciones que contribuyan a mejorar el entorno que nos rodea, tratar de hacer más cómoda la vida de las personas y disfrutar mucho durante el proceso.
@@ -337,7 +340,7 @@
     </article>
 
     <!--Contact-->
-    <article>
+    <article  id="contact">
         <h1><span class="emojis" aria-hidden="true">🤝 </span>¡Contactemos!</h1>
         <section>
             <div class="content-block">
@@ -350,7 +353,7 @@
 
 <!--Footer-->
 <footer>
-    <a href="#home" rel="noopener noreferrer" aria-label="Enlace para volver al principio de la página" title="Enlace para volver al principio de la página">Volver arriba</a>
+    <a href="#home" rel="noopener noreferrer" aria-label="Enlace para volver al principio de la página" title="Enlace para volver al principio de la página">Volver arriba ↑</a>
 
     <div class="content-block">
         <p class="small secondary">Página web creada siguiendo las <a href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad" title="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad">WCAG 2</a>, tratando de garantizar el nivel AAA.</p>
