--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <header>
     <div class="content-block">
         <h2 class="regular secondary">Curriculum vitae</h2>
-        <a href="#contact" rel="noopener noreferrer" aria-label="Enlace para a la sección que contiene los datos de contacto" title="Enlace para a la sección que contiene los datos de contacto">Ir a datos de contacto ↓</a>
+        <a href="#contact" rel="noopener noreferrer" aria-label="Enlace a la sección de la página que contiene los datos de contacto" title="Enlace a la sección de la página que contiene los datos de contacto">Ir a datos de contacto ↓</a>
     </div>
 </header>
 
