add arrow icons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <header>
     <div class="content-block">
         <h2 class="regular secondary">Curriculum vitae</h2>
-        <a href="#contact" rel="noopener noreferrer" aria-label="Enlace a la sección de la página que contiene los datos de contacto" title="Enlace a la sección de la página que contiene los datos de contacto">Ir a datos de contacto ↓</a>
+        <a href="#contact" rel="noopener noreferrer" aria-label="Enlace a la sección de la página que contiene los datos de contacto" title="Enlace a la sección de la página que contiene los datos de contacto">Ir a datos de contacto<span class="emojis" aria-hidden="true"> ↓</span></a>
     </div>
 </header>
 
@@ -28,7 +28,7 @@
     <!--About me-->
     <article>
         <section>
-            <h1><span class="emojis" aria-hidden="true">🤙 </span>Soy Álvaro Molina · <i class="accent regular">Diseñador de producto</i></h1>
+            <h1><span class="emojis" aria-hidden="true">🤙 </span>Soy Álvaro Molina <span class="emojis" aria-hidden="true">➭</span> <i class="accent regular">Diseñador de producto</i></h1>
             <div class="content-block">
                 <h5 class="secondary">Sobre mi</h5>
                 <p>Mi objetivo es crear soluciones que contribuyan a mejorar el entorno que nos rodea, tratar de hacer más cómoda la vida de las personas y disfrutar mucho durante el proceso.
@@ -56,7 +56,7 @@
         <section class="content-highlighted">
             <h5 class="secondary">Puesto actual</h5>
             <div class="content-block">
-                <h3>Diseñador de producto en <a href="https://genially.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la empresa" title="Enlace a la página web de la empresa">Genially</a></h3>
+                <h3>Diseñador de producto en <a href="https://genially.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la empresa" title="Enlace a la página web de la empresa">Genially<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
                 <p><i>Enero 2022 - <b class="accent">Actualidad </b>(Remoto)</i></p>
             </div>
 
@@ -83,7 +83,7 @@
 
         <section>
             <div class="content-block">
-                <h3>Diseñador de IU & Sistema de diseño en <a href="https://genially.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la empresa" title="Enlace a la página web de la empresa">Genially</a></h3>
+                <h3>Diseñador de IU & Sistema de diseño en <a href="https://genially.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la empresa" title="Enlace a la página web de la empresa">Genially<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
                 <p><i>Julio 2020 - Enero 2022 (Remoto)</i></p>
             </div>
 
@@ -107,7 +107,7 @@
 
         <section>
             <div class="content-block">
-                <h3>Diseñador gráfico en <a href="https://genially.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la empresa" title="Enlace a la página web de la empresa">Genially</a></h3>
+                <h3>Diseñador gráfico en <a href="https://genially.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la empresa" title="Enlace a la página web de la empresa">Genially<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
                 <p><i>Junio 2019 - Julio 2020 (Córdoba)</i></p>
             </div>
 
@@ -190,14 +190,14 @@
         <section class="content-highlighted">
             <h5 class="secondary">Colaboración en curso</h5>
             <div class="content-block">
-                <h3>Colaborador en <a href="https://www.cicbata.org/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la asociación" title="Enlace a la página web de la asociación">CiC-Batá</a></h3>
+                <h3>Colaborador en <a href="https://www.cicbata.org/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la asociación" title="Enlace a la página web de la asociación">CiC-Batá<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
                 <p><i>Junio 2023 - <b class="accent">Actualidad </b>(Córdoba)</i></p>
             </div>
 
             <div class="content-extension">
                 <div class="content-block">
                     <h5 class="secondary">Descripción</h5>
-                    <p>Llevando a cabo un proyecto de investigación para encontrar soluciones que faciliten el acceso a la tecnología y la reducción de la brecha digital en personas mayores. <a href="https://view.genially.com/65d763a85b5dfb0014dd1b29" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver documento con las conclusiones de la investigación" title="Enlace a otra página web para ver documento con las conclusiones de la investigación">Ver conclusiones</a>.</p>
+                    <p>Llevando a cabo un proyecto de investigación para encontrar soluciones que faciliten el acceso a la tecnología y la reducción de la brecha digital en personas mayores. <a href="https://view.genially.com/65d763a85b5dfb0014dd1b29" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver documento con las conclusiones de la investigación" title="Enlace a otra página web para ver documento con las conclusiones de la investigación">Ver conclusiones<span class="emojis" aria-hidden="true"> ↗</span></a>.</p>
                 </div>
 
                 <div class="content-block">
@@ -213,7 +213,7 @@
 
         <section>
             <div class="content-block">
-                <h3>Colaboración con <a href="https://www.ajdem.org/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la asociación" title="Enlace a la página web de la asociación">AJDEM</a></h3>
+                <h3>Colaboración con <a href="https://www.ajdem.org/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la asociación" title="Enlace a la página web de la asociación">AJDEM<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
                 <p><i>Noviembre 2013 (Jaén)</i></p>
             </div>
 
@@ -241,7 +241,7 @@
         <section class="content-highlighted">
             <h5 class="secondary">Formación en progreso</h5>
             <div class="content-block">
-                <h3 class="regular"><a href="https://www.designgraduate.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la escuela" title="Enlace a la página web de la escuela">Design Graduate</a></h3>
+                <h3 class="regular"><a href="https://www.designgraduate.com/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a la página web de la escuela" title="Enlace a la página web de la escuela">Design Graduate<span class="emojis" aria-hidden="true"> ↗</span></a></h3>
                 <p><i>Instituto Tramontana, 2023 - <b class="accent">Actualidad </b>(Remoto)</i></p>
             </div>
         </section>
@@ -333,7 +333,7 @@
             <div class="content-extension">
                 <div class="content-block">
                     <h5 class="secondary">Descripción</h5>
-                    <p>Premio expedido por la Diputación de Jaén por el Cortometraje Habitación 205. <a href="https://jaenaudiovisual.es/palmares-del-vi-rodando-por-jaen/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver la nota de prensa" title="Enlace a otra página web para ver la nota de prensa">Ver nota de prensa</a>.</p>
+                    <p>Premio expedido por la Diputación de Jaén por el Cortometraje Habitación 205. <a href="https://jaenaudiovisual.es/palmares-del-vi-rodando-por-jaen/" target="_blank" rel="noopener noreferrer" aria-label="Enlace a otra página web para ver la nota de prensa" title="Enlace a otra página web para ver la nota de prensa">Ver nota de prensa<span class="emojis" aria-hidden="true"> ↗</span></a>.</p>
                 </div>
             </div>
         </section>
@@ -344,19 +344,19 @@
         <h1><span class="emojis" aria-hidden="true">🤝 </span>¡Contactemos!</h1>
         <section>
             <div class="content-block">
-                <p><span class="emojis" aria-hidden="true">👤 </span><b>Linkedin</b>: <a href="https://linkedin.com/in/alvaromolinaruiz/" target="_blank" rel="noopener noreferrer" aria-label="Enlace al perfil de Linkedin" title="Enlace al perfil de Linkedin">@alvaromolinaruiz</a></p>
-                <p><span class="emojis" aria-hidden="true">✉️ </span><b>Correo</b>: <a href="mailto:alvaromolrui@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Enlace para enviar un correo electrónico" title="Enlace para enviar un correo electrónico">alvaromolrui@gmail.com</a></p>
-                <p><span class="emojis" aria-hidden="true">📱 </span><b>Teléfono</b>: <a href="tel:+34653265884" target="_blank" rel="noopener noreferrer" aria-label="Enlace para llamar por teléfono" title="Enlace para llamar por teléfono">(+34) 653 26 58 84</a></p>
+                <p><span class="emojis" aria-hidden="true">👤 </span><b>Linkedin</b>: <a href="https://linkedin.com/in/alvaromolinaruiz/" target="_blank" rel="noopener noreferrer" aria-label="Enlace al perfil de Linkedin" title="Enlace al perfil de Linkedin">@alvaromolinaruiz<span class="emojis" aria-hidden="true"> ↗</span></a></p>
+                <p><span class="emojis" aria-hidden="true">✉️ </span><b>Correo</b>: <a href="mailto:alvaromolrui@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Enlace para enviar un correo electrónico" title="Enlace para enviar un correo electrónico">alvaromolrui@gmail.com<span class="emojis" aria-hidden="true"> ↗</span></a></p>
+                <p><span class="emojis" aria-hidden="true">📱 </span><b>Teléfono</b>: <a href="tel:+34653265884" target="_blank" rel="noopener noreferrer" aria-label="Enlace para llamar por teléfono" title="Enlace para llamar por teléfono">(+34) 653 26 58 84<span class="emojis" aria-hidden="true"> ↗</span></a></p>
             </div>
         </section>
     </article>
 
 <!--Footer-->
 <footer>
-    <a href="#home" rel="noopener noreferrer" aria-label="Enlace para volver al principio de la página" title="Enlace para volver al principio de la página">Volver arriba ↑</a>
+    <a href="#home" rel="noopener noreferrer" aria-label="Enlace para volver al principio de la página" title="Enlace para volver al principio de la página">Volver arriba<span class="emojis" aria-hidden="true"> ↑</span></a>
 
     <div class="content-block">
-        <p class="small secondary">Página web creada siguiendo las <a href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad" title="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad">WCAG 2</a>, tratando de garantizar el nivel AAA.</p>
+        <p class="small secondary">Página web creada siguiendo las <a href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad" title="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad">WCAG 2<span class="emojis" aria-hidden="true"> ↗</span></a>, tratando de garantizar el nivel AAA.</p>
         <p class="small secondary">Si quieres puedes <a href="assets/Álvaro Molina - Diseñador de producto.pdf" download aria-label="Enlace para descargar la versión PDF del curriculum vitae" title="Enlace para descargar la versión PDF del curriculum vitae">descargar la versión PDF</a>.</p>
     </div>
 </footer>
