add download icon

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
     <div class="content-block">
         <p class="small secondary">Página web creada siguiendo las <a href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad" title="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad">WCAG 2<span class="emojis" aria-hidden="true"> ↗</span></a>, tratando de garantizar el nivel AAA.</p>
-        <p class="small secondary">Si quieres puedes <a href="assets/Álvaro Molina - Diseñador de producto.pdf" download aria-label="Enlace para descargar la versión PDF del curriculum vitae" title="Enlace para descargar la versión PDF del curriculum vitae">descargar la versión PDF</a>.</p>
+        <p class="small secondary">Si quieres puedes <a href="assets/Álvaro Molina - Diseñador de producto.pdf" download aria-label="Enlace para descargar la versión PDF del curriculum vitae" title="Enlace para descargar la versión PDF del curriculum vitae">descargar la versión PDF<span class="emojis" aria-hidden="true"> ↴</span></a>.</p>
     </div>
 </footer>
 
