--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--About me-->
     <article>
         <section>
-            <h1><span class="emojis" aria-hidden="true">🤙 </span>Soy Álvaro Molina <span class="emojis" aria-hidden="true">➭</span> <i class="accent regular">Diseñador de producto</i></h1>
+            <h1><span class="emojis" aria-hidden="true">🤙 </span>Soy Álvaro Molina, <i class="accent regular">diseñador de producto</i></h1>
             <div class="content-block">
                 <h5 class="secondary">Sobre mi</h5>
                 <p>Mi objetivo es crear soluciones que contribuyan a mejorar el entorno que nos rodea, tratar de hacer más cómoda la vida de las personas y disfrutar mucho durante el proceso.
