accesibility issues for nav buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <header class="content-block">
     <h2 class="regular secondary">Curriculum vitae</h2>
 
-    <a class="action right" href="#contact" rel="noopener noreferrer" aria-label="Enlace a la sección de la página que contiene los datos de contacto" title="Enlace a la sección de la página que contiene los datos de contacto">Ir a datos de contacto<span class="emojis" aria-hidden="true"> ↓</span></a>
+    <a class="action right" href="#contact" rel="noopener noreferrer" aria-label="Botón de navegación para ir a la sección de la página que contiene los datos de contacto" title="Botón de navegación para ir a la sección de la página que contiene los datos de contacto">Ir a datos de contacto<span class="emojis" aria-hidden="true"> ↓</span></a>
 </header>
 
 <!--Content-->
@@ -352,7 +352,7 @@
 
 <!--Footer-->
 <footer>
-    <a class="action right" href="#home" rel="noopener noreferrer" aria-label="Enlace para volver al principio de la página" title="Enlace para volver al principio de la página">Volver arriba<span class="emojis" aria-hidden="true"> ↑</span></a>
+    <a class="action right" href="#home" rel="noopener noreferrer" aria-label="Botón de navegación para volver al principio de la página" title="Botón de navegación para volver al principio de la página">Volver arriba<span class="emojis" aria-hidden="true"> ↑</span></a>
 
     <div class="content-block">
         <p class="small secondary">Página web creada siguiendo las <a href="https://www.w3.org/WAI/standards-guidelines/" target="_blank" rel="noopener noreferrer" aria-label="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad" title="Enlace para ir a la página de la w3 donde se recogen las guías de accesibilidad">WCAG 2<span class="emojis" aria-hidden="true"> ↗</span></a>, tratando de garantizar el nivel AAA.</p>
