--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 <body id="home">
 
 <!--Header-->
-<header class="content-block">
+<header>
     <h2 class="regular secondary">Curriculum vitae</h2>
-
-    <a class="action right" href="#contact" rel="noopener noreferrer" aria-label="Botón de navegación para ir a la sección de la página que contiene los datos de contacto" title="Botón de navegación para ir a la sección de la página que contiene los datos de contacto">Ir a datos de contacto<span class="emojis" aria-hidden="true"> ↓</span></a>
 </header>
 
 <!--Content-->
@@ -28,6 +26,9 @@
     <article>
         <section>
             <h1><span class="emojis" aria-hidden="true">🤙 </span>Soy Álvaro Molina, <i class="accent regular">diseñador de producto</i></h1>
+
+            <a class="action right" href="#contact" rel="noopener noreferrer" aria-label="Botón de navegación para ir a la sección de la página que contiene los datos de contacto" title="Botón de navegación para ir a la sección de la página que contiene los datos de contacto">Ir a datos de contacto<span class="emojis" aria-hidden="true"> ↓</span></a>
+            
             <div class="content-block">
                 <h5 class="secondary">Sobre mi</h5>
                 <p>Mi objetivo es crear soluciones que contribuyan a mejorar el entorno que nos rodea, tratar de hacer más cómoda la vida de las personas y disfrutar mucho durante el proceso.
