delete mailto link rel and target

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         <section>
             <div class="content-block">
                 <p><span class="emojis" aria-hidden="true">👤 </span><b>Linkedin</b>: <a href="https://linkedin.com/in/alvaromolinaruiz/" target="_blank" rel="noopener noreferrer" aria-label="Enlace al perfil de Linkedin" title="Enlace al perfil de Linkedin">@alvaromolinaruiz<span class="emojis" aria-hidden="true"> ↗</span></a></p>
-                <p><span class="emojis" aria-hidden="true">✉️ </span><b>Correo</b>: <a href="mailto:alvaromolrui@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Enlace para enviar un correo electrónico" title="Enlace para enviar un correo electrónico">alvaromolrui@gmail.com<span class="emojis" aria-hidden="true"> ↗</span></a></p>
+                <p><span class="emojis" aria-hidden="true">✉️ </span><b>Correo</b>: <a href="mailto:alvaromolrui@gmail.com" aria-label="Enlace para enviar un correo electrónico" title="Enlace para enviar un correo electrónico">alvaromolrui@gmail.com<span class="emojis" aria-hidden="true"> ↗</span></a></p>
                 <p><span class="emojis" aria-hidden="true">📱 </span><b>Teléfono</b>: <a href="tel:+34653265884" aria-label="Enlace para llamar por teléfono" title="Enlace para llamar por teléfono">(+34) 653 26 58 84<span class="emojis" aria-hidden="true"> ↗</span></a></p>
             </div>
         </section>
